# elettra-ng

./: .dockerignore  .env.example  .env.staging.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: mobile.yml
apps/ai_assistant/: admin.py  context.py  diagnostics.py  models.py  provider.py  questions.py  serializers.py  tasks.py  urls.py  usage.py  views.py
apps/appointments/: admin.py  models.py  serializers.py  urls.py  views.py
apps/attachments/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/cases/: access.py  admin.py  events.py  models.py  permissions.py  serializers.py  share_services.py  urls.py  views.py
apps/common/: serializers.py
apps/conversations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
apps/guests/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
apps/identity/: admin.py  apps.py  (+9 more)
config/: urls.py
deploy/: Caddyfile.staging  compose.staging.yml  staging.local.env.example
docker/: entrypoint.sh
frontend/: README.md  package-lock.json
tests/: test_ai_assistant_api.py  test_appointments_api.py  test_asset_maintenance_api.py  test_attachments_api.py  test_backoffice_admin.py  test_case_sharing_conversations_api.py  test_cases_api.py  test_guests_api.py  test_health.py  test_identity_api.py  test_mvp_demo_seed.py  test_notifications_api.py  test_organizations_api.py  test_organizations_domain.py  test_professionals_api.py  test_taxonomy_api.py  test_troubleshooting_api.py  test_user_manager.py
work/: md_to_pdf.py
(+158 files in other folders)
