[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "elettra-ng-api"
version = "0.1.0"
description = "API V1 backend for Elettra home technical maintenance domain"
requires-python = ">=3.12"
dependencies = [
  "Django>=5.2,<5.3",
  "djangorestframework>=3.15,<4",
  "drf-spectacular>=0.28,<1",
  "django-environ>=0.11,<1",
  "psycopg[binary]>=3.2,<4",
  "redis>=6,<7",
  "celery>=5.4,<6",
  "django-storages>=1.14,<2",
  "boto3>=1.35,<2",
  "openai>=1.108,<2",
  "sentry-sdk>=2,<3",
  "django-cors-headers>=4.4,<5",
  "whitenoise>=6.8,<7",
  "gunicorn>=23,<24",
  "djangorestframework-simplejwt>=5.3,<6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-django>=4.9,<5",
]

[tool.setuptools.packages.find]
include = ["apps*", "config*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
pythonpath = ["."]
testpaths = ["tests", "apps"]
